<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">钱帮主</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bottom_bar_index">首页</string>
    <string name="bottom_bar_invest">投资</string>
    <string name="bottom_bar_mine">我的</string>
    <string name="bottom_bar_more">更多</string>
    <string name="title_bar_back">返回</string>
    <string name="tongzhi">通知</string>
    <string name="quexiao">取消</string>
    <string name="queding">确定</string>
    <string name="denglu">登录</string>
    <string name="zhuce">注册</string>
    <string name="mashangtiyan">马上体验</string>

    <!-- index -->
    <string name="keyongyuer">可用余额（元）</string>
    <string name="yizhuanzonger">已赚总额（元）</string>
    <string name="lingyuan">￥0.00</string>
    <string name="touzilicai">投资理财</string>
    <string name="tiyanzhuanqu">债权转让</string>
    <string name="qutouzi">去投资</string>
    <string name="sanbiaotouzi">散标投资</string>
    <string name="sanbiaotouzijieshi">11%-18%的年化收益，100元起投</string>
    <string name="qujiaru">去加入</string>
    <string name="wenzhuanbao">稳赚保</string>
    <string name="wenzhuanbaojieshi">收益稳定，100%承保</string>
    <string name="qugoumai">去购买</string>
    <string name="zhaiquanzhuanrang">债权转让</string>
    <string name="zhaiquanzhuanrangjieshi">债权灵活，安全，高效</string>
    <string name="lingqu">领取体验金</string>
    <string name="licaitiyan">理财体验</string>
    <string name="licaitiyanjieshi">20%年化收益，零成本</string>
    <string name="shengyujiner">剩余金额</string>
    <string name="kegoumaifenshu">可购买份数</string>
    <string name="qingshurugoumaifenshu">请输入购买份数</string>
    <string name="yujishouyi">预计收益</string>
    <string name="lijitoubiao">立即投标</string>
    <string name="shengyufenshu">剩余份数</string>
    <string name="goumaizongxu">购买总需</string>
    <string name="lijigoumai">立即购买</string>
    <string name="indexkzb">精选理财</string>
    <string name="indexkzbdesc">周期短、投资灵活</string>
    <string name="indexxmzt">存管理财</string>
    <string name="indexxmztdesc">华兴银行资金存管</string>
    <string name="indexzqzr">债权转让</string>
    <string name="indexzqzrdesc">灵活理财，更多选择</string>
    <string name="indewyjk">我要借款</string>
    <string name="indexwyjkdesc">安全、快捷、高效</string>

    <!--kzb  -->
    <string name="kuaizhuaibao">快赚宝</string>
    <string name="kuaizhuaibaodesc">周期短，投资灵活</string>
    <!-- mine -->
    <string name="minesanbiaotouzi">我的散标投资</string>
    <string name="minewenzhuanbao">我的稳赚保</string>
    <string name="minezhaiquanzhuanrang">我的债权转让</string>
    <string name="minelicaitiyan">交易记录</string>
    <string name="nihao">您好,</string>
    <string name="chongzhi">充值</string>
    <string name="tikuan">提现</string>
    <string name="biaodezonger">标的总额</string>
    <string name="nianlilv">年利率</string>
    <string name="huankuanqixian">还款期限</string>
    <string name="keyongjiner">可用金额</string>
    <string name="dongjiejiner">冻结金额</string>
    <string name="zhanghuzonger">账户总额</string>
    <string name="tiyanjinhuoqu">体验金</string>
    <string name="anquanxinxi">安全信息</string>
    <string name="nicheng">昵称</string>
    <string name="xingbie">性别</string>
    <string name="chushengriqi">出生日期</string>
    <string name="wodefuwuma">我的服务码</string>
    <string name="wodeerweima">我的二维码</string>
    <string name="tuichu">退出</string>
    <string name="shimingrenzheng">实名认证</string>
    <string name="xiugaishouji">修改手机</string>
    <string name="tixianmima">提现密码</string>
    <string name="xiugai">修改</string>
    <string name="zhaohui">修改/找回</string>
    <string name="zhaohui1">找回</string>
    <string name="yishezhi">已设置</string>
    <string name="zhaohui2">修改/找回提款密码</string>
    <string name="huishouzhong">回收中</string>
    <string name="toubiaozhong">投标中</string>
    <string name="yijieqing">已结清</string>
    <string name="yizhuanchu">已转出</string>

    <!-- more -->
    <string name="banbenhao">V1.0</string>
    <string name="kefurexian">客服热线</string>
    <string name="kefurexianhao">400-8535-666</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="shezhi">设置</string>
    <string name="kefugongzuoshijian">客服工作时间  9：00-21：00</string>

    <!-- login and register -->
    <string name="yonghumingshoujihao">用户名/手机号/邮箱</string>
    <string name="denglumima">登录密码</string>
    <string name="wangjimima">忘记密码</string>
    <string name="shoujihao">手机号</string>
    <string name="qurendenglumima">确认登录密码</string>
    <string name="duanxinyanzhengma">请输入验证码</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="tuijianrenfuwuma">推荐人服务码（选填）</string>
    <string name="wotongyi">  我同意</string>
    <string name="quqianzhucexieyi">《钱帮主注册协议》</string>

    <!-- listView -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">钱帮主正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- look -->
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">设置手势密码</string>
    <string name="setup_gesture_pattern_again">请确认手势密码</string>
    <string name="forget_gesture_code">忘记手势密码</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">输入手势密码</string>
    <string name="set_gesture_pattern_reason">手势密码将在您开启程序是启动</string>
    <string name="reset_gesture_code">重设手势密码</string>

    <string name="wuyoucunzheng1">无忧存证是安存科技联合公证机构共同推出，以“增强互联网金融用户交易安全”为核心的全球首个一站式互联网金融公证保全解决方案。当用户通过互联网发生交易行为的同时，将交易数据实时同步至安存金融级数据保全云。所保全数据严格满足证据的真实性、合法性、相关性要求，必要时可以依法申请出具公证书，真正做到一站式公证保全。</string>
    <string name="wuyoucunzheng2">安存无忧电子数据保全平台已跟全国28个省、直辖市、自治区公证处签约合作，其证明力获得人民法院的认可。一旦出现纠纷，投资者可以通过后台提交公证申请，维护自身合法权益。</string>
    
    <string name="wuyoucunzheng3">2013年1月1日实施的《中华人民共和国民事诉讼法》第63条已经明确将电子数据列为单一证据类别——电子数据证据成为法定证据。但与其它传统证据形式相比，电子数据证据有着海量、脆弱、易变易改、不易保存原始数据等特点，普通电子数据证据证明力通常不受司法认可。</string>
    <string name="wuyoucunzheng4">钱帮主联手无忧存证，采取全电子数据生命周期存证模式，即从数据的生成和创建——数据的存储和传输——数据的取得，全方位确保所保全的电子数据的真实性、完整性、安全性。在无忧存证中保全的电子数据，能通过后台申请公正机关公证，证明力获人民法院认可。</string>
    <string name="wuyoucunzheng5">用户在钱帮主整个投资过程的电子数据，用第三方保全的办法记录事实真相，明确主体的权利与义务，有效防范法律风险。平台信息更透明，投资人利益有所保障。</string>
    <string name="wuyoucunzheng6">保全数据包括：项目信息、交易信息、充值信息、提现信息、用户信息。</string>
    
    <string name="yinhangcunguan1">银行资金存管，是指投资人、借款人在华兴银行开通实名电子银行账户（即E账户），用户投资和还款均通过银行账户资金划拨完成，钱帮主平台仅进行信息撮合，全程不触碰任何资金。</string>
    <string name="yinhangcunguan2">上线资金存管，意味着钱帮主与华兴银行系统对接，确保平台自有资金账户和客户资金账户分离，平台投资人均可通过华兴银行存管系统开设独立的存管账户。用户的充值、投资、提现与划拨等交易类操作，均通过独立存管账户完成，能有效避免网贷平台非法挪用投资人资金，提供银行级别的资金安全保障。</string>
    <string name="yinhangcunguan3">根据银监会最新发布的《网络借贷信息中介机构业务活动管理暂行办法》第二十八条，网络借贷信息中介机构应当实行自身资金与出借人和借款人资金的隔离管理，并选择符合条件的银行业金融机构作为出借人与借款人的资金存管机构。</string>
    <string name="yinhangcunguan4">广东华兴银行是经国务院有关部委批准，于2011年8月依法创新设立的一家混合所有制商业银行，注册资本50亿元，注册地位于汕头经济特区，运营总部设在广州市。</string>
    <string name="yinhangcunguan5">广东华兴银行作为较早上线网贷平台客户资金存管系统的银行，在资金存管、风险把控等方面拥有先进的技术和丰富的经验。</string>
    <string name="yinhangcunguan6">用户操作投资的交易信息和资金则在华兴银行系统体现，平台不直接经手客户所有资金，也无权动用客户在银行存管系统的资金。华兴银行会对交易流程进行核查，使借贷双方的债权关系清晰明确，保障您资金安全。</string>
    <string name="yinhangcunguan7">方法一：通过E账户充值（实时到账）（需先通过本人银行卡转账至您的华兴银行E账户中，然后进行充值） 官方推荐方法 </string>
    <string name="yinhangcunguan8">方法二：通过已绑定的银行卡充值（T+1工作日到账）</string>
    <string name="yinhangcunguan9">所有账户均需经要实名认证。华兴银行存管系统采用“同卡进出”原则，即您在该账户内的资金只能提现至您绑定的银行卡中，只有“账户余额”与“待收金额”同时为“0”时，才能更换绑定银行卡，因此，即便您的账户及提现密码同时被不法分子窃取，也无法动用您的资金。</string>
    <string name="yinhangcunguan10">新注册用户需下载广东华兴银行“投融资平台”APP登录华兴银行E账户进行个人实名信息认证后方可进行提现。</string>
</resources>