<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/mmmmscrollview5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_96px"
        layout="@layout/titlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mmmmscrollview5"
        android:background="#F0FCFF" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="什么是银行资金存管？"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_36px" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/yinhangcunguan1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_28px" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/yinhangcunguan2"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_28px" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/yinhangcunguan3"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_28px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="为什么选择华兴银行进行资金存管？"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_36px" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/yinhangcunguan4"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_28px" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/yinhangcunguan5"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_28px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="银行存管如何保障资金安全？"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_36px" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/yinhangcunguan6"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_28px" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:src="@drawable/yinhangcunguananquanmoshi" >
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="银行存管常见问题"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_36px" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="1.银行存管平台如何充值？"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_28px" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/yinhangcunguan7"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_24px" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yinhangcunguan8"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_24px" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:text="2.账户资金安全如何保证？"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_28px" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/yinhangcunguan9"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_24px" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:text="3.银行存管上线后提现会有什么影响？"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_28px" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="16dp"
                android:text="@string/yinhangcunguan10"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_24px" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>