<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#666">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/zhaohui2"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_24px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/dialog_down_xiugai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/xiugai"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_32px" />

            <Button
                android:id="@+id/dialog_down_zhaohui"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/zhaohui1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_32px" />

            <Button
                android:id="@+id/dialog_down_quxiao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="#333"
                android:gravity="center"
                android:text="@string/quexiao"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_32px" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>